// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PClean /> renders default 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Paragraph__PClean-sc-1weuljs-0",
        "isStatic": false,
        "rules": Array [
          "margin:0 0.5rem;padding:0;",
        ],
      },
      "displayName": "Paragraph__PClean",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Paragraph__PClean-sc-1weuljs-0",
      "target": "p",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`<PFlex /> renders default 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Paragraph__PFlex-sc-1weuljs-1",
        "isStatic": false,
        "rules": Array [
          "display:flex;align-content:center;align-items:center;margin:0 0.5rem;padding:0;",
        ],
      },
      "displayName": "Paragraph__PFlex",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Paragraph__PFlex-sc-1weuljs-1",
      "target": "p",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
